# advancedfx

./: .gitmodules  AGENTS.md  CMakeLists.txt  CREDITS.md  README.md
AfxHookGoldSrc/: AfxSteamLegacy.h  CMakeLists.txt  cstrike_deathmsg.cpp  demo_tools.cpp  filming.cpp  hl_addresses.cpp  hl_addresses.h  mirv_info.cpp  mirv_input.cpp
AfxHookGoldSrc/hooks/: HookHw.cpp  user32Hooks.cpp
AfxHookGoldSrc/hooks/hw/: R_DrawEntitiesOnList.cpp  R_DrawSkyBoxEx.cpp
AfxHookSource/: AfxStreams.cpp  CMakeLists.txt  CampathDrawer.cpp  CampathDrawer.h  RenderView.cpp  d3d9Hooks.cpp  main.cpp
AfxHookSource2/: AfxHookSource2Rs.cpp  CMakeLists.txt  CampathDrawer.cpp  CampathDrawer.h  ClientEntitySystem.cpp  ClientEntitySystem.h  ClientTrace.cpp  ClientTrace.h  DeathMsg.cpp  FreecamController.cpp  FreecamController.h  GameEvents.cpp  MirvColors.cpp  MirvCommands.cpp  MirvImage.cpp  MirvImage.h  NadeCam.cpp  NadeCam.h  NvencStream.cpp  NvencStream.h  ObsInputReceiver.cpp  ObsInputReceiver.h  ObsObserverState.h  ObsSpectatorBindings.cpp  ObsSpectatorBindings.h  ObsWebSocketActions.cpp  ObsWebSocketActions.h  ObsWebSocketHandlers.cpp  ObsWebSocketHandlers.h  ObsWebSocketProtocol.cpp  ObsWebSocketProtocol.h  ObsWebSocketServer.cpp  ObsWebSocketServer.h  PlayerPathDrawer.cpp  PlayerPathDrawer.h  RenderSystemDX11Hooks.cpp  RenderSystemDX11Hooks.h  addresses.cpp  addresses.h  main.cpp  (+1 more)
AfxHookSource2Rs/src/: lib.rs
AfxHookSource2Rs/src/advancedfx/js/campath/: mod.rs
hlae/: CMakeLists.txt  UpdateCheck.cs
installer/HlaeCore/: Package.wxs
installer/HlaeFfmpeg/: Package.wxs
installer/setup/: Bundle.wxs
misc/mirv-script/: eslint.config.mjs  package-lock.json  package.json
misc/mirv-script/src/examples/3-command-snippet/: subcommand.ts
misc/mirv-script/src/examples/5-toeyes/: index.ts
misc/mirv-script/src/examples/6-bird/: index.ts
misc/mirv-script/src/examples/8-lock/: mirv_lock.ts
misc/mirv-script/src/snippets/: CMakeLists.txt  mirv_lock.ts  mirv_script_spec_lock.ts  mirv_script_view.ts
misc/mirv-script/src/types/: mirv.d.ts
resources/: AfxHookGoldSrc_changelog.xml  AfxHookSource2_changelog.xml  AfxHookSource_changelog.xml  changelog.xml
resources/resources/AfxHookSource2/: gamestate_integration_hot.cfg
shaders/: afx_drawtexture_vs_5_0.fxc
shared/: AfxMath.h  CamPath.cpp  CamPath.h  CommandSystem.cpp  CommandSystem.h  ImageTransformer.cpp  MirvCampath.cpp  MirvInput.cpp  MirvInput.h
shared/overlay/: AttachCameraState.cpp  AttachCameraState.h  BirdCamera.cpp  BirdCamera.h  CMakeLists.txt  CameraOverride.cpp  CameraOverride.h  GsiHttpServer.cpp  GsiHttpServer.h  Hud.cpp  Hud.h  IOverlayRenderer.h  InputRouter.cpp  InputRouter.h  Overlay.cpp  Overlay.h  OverlayDx11.cpp  OverlayDx11.h  OverlayDx9.cpp  OverlayDx9.h  OverlayVk.h
shared/overlay/assets/: gamestate_integration_drweissbrot_hud_paper.cfg
shared/overlay/assets/radar/: radars.json
shared/overlay/radar/: Radar.cpp  Radar.h
tools/DemoParser/: DemoParser.csproj  Program.cs
